OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/display.h


/* cnversions.c */
int D_do_conversions(const struct Cell_head *, int, int, int, int);

int D_is_lat_lon(void);

double D_get_u_to_d_xconv(void);

double D_get_u_to_d_yconv(void);

double D_get_u_west(void);

double D_get_u_east(void);

double D_get_u_north(void);

double D_get_u_south(void);